added blog preview default photos, update sidenar image, fix margins and font for timeline, updated community component on project page

--- a/SparcWeb/Pages/Project.razor
+++ b/SparcWeb/Pages/Project.razor
@@ -6,10 +6,12 @@
             <div class="header">
                 <div class="title">
                     <h2 class="title-1 semi-bold">Kode Kit</h2>
-                    <img src="./images/icons/Up-Right.svg" />
+                    <a href="http://kodekit.io">
+                        <img src="./images/icons/Up-Right.svg" />
+                    </a>
                 </div>
                 <div>
-                    <p class="title-2">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                    <p class="subtitle-1">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
                 </div>
                 <div class="cta-flex">
                     <div class="profile-pics-wrapper">
@@ -39,13 +41,13 @@
 
     <section class="timeline">
         <div class="container">
+            <div class="header">
+                <p class="subtitle-small">Recent Timeline</p>
+            </div>
             <div class="wrapper">
                 <div class="timeline-sidebar">
                     <img src="./images/Sidebar.png" />
                 </div>
-                <div class="header">
-                    <p class="subtitle-small">Recent Timeline</p>
-                </div>
                 <div class="timeline-item">
                     <div class="item-header">
                         <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
@@ -57,7 +59,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="item-header">
-                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="title-2 semi-bold">It's on the way.</p>
                         <p class="timeline-date subtitle-small">AUG 22, 2022</p>
                     </div>
                     <div class="timeline-content">
@@ -66,7 +68,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="item-header">
-                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="title-2 semi-bold">One step closer.</p>
                         <p class="timeline-date subtitle-small">AUG 22, 2022</p>
                     </div>
                     <div class="timeline-content">
@@ -75,7 +77,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="item-header">
-                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="title-2 semi-bold">How we are planning.</p>
                         <p class="timeline-date subtitle-small">AUG 22, 2022</p>
                     </div>
                     <div class="timeline-content">
@@ -84,7 +86,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="item-header">
-                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="title-2 semi-bold">What do you think?</p>
                         <p class="timeline-date subtitle-small">AUG 22, 2022</p>
                     </div>
                     <div class="timeline-content">
@@ -134,6 +136,8 @@
                     </div>
                 </div>
 
+                <div class="divider"></div>
+
                 <div class="community-card badge">
                     <div class="sparc-badge">
                         <img src="./images/sparc-approved-badge-2x 1.png" />
@@ -162,7 +166,51 @@
                 <h3 class="subtitle-large semi-bold">Related Blogs</h3>
                 <p class="subtitle-small">Quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
             </div>
-            <BlogPartial />
+            <div class="blog-wrapper">
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="./images/Frame 359 Group 48.png" />
+                    </div>
+                    <div class="blog-tags">
+                        <button class="tag btn-small">#Design</button>
+                        <button class="tag btn-small">#Productivity</button>
+                    </div>
+                    <div>
+                        <p class="subtitle-medium">
+                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        </p>
+                    </div>
+                </div>
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="./images/Frame 360 Group 48.png" />
+                    </div>
+                    <div class="blog-tags">
+                        <button class="tag btn-small">#Design</button>
+                        <button class="tag btn-small">#Productivity</button>
+                    </div>
+                    <div>
+                        <p class="subtitle-medium">
+                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        </p>
+                    </div>
+                </div>
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="./images/Frame 361 Group 48.png" />
+                    </div>
+                    <div class="blog-tags">
+                        <button class="tag btn-small">#Design</button>
+                        <button class="tag btn-small">#Productivity</button>
+                    </div>
+                    <div>
+                        <p class="subtitle-medium">
+                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </section>
 </div>
