--- a/SparcWeb/wwwroot/Styles/Page/Project.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Project.scss
@@ -1,7 +1,12 @@
-﻿.project-page {
+﻿@import "../Global/_variables.scss";
+
+.project-page {
     .hero-header {
+        padding-top: 170px;
+        padding-bottom: 140px;
+
         .header {
-            max-width: 32%;
+            max-width: 725px;
             margin: 0 auto;
 
             .title {
@@ -9,6 +14,14 @@
                 align-items: center;
                 justify-content: center;
                 margin-bottom: 6px;
+
+                img {
+                    margin-left: 32px;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
             }
 
             .cta-flex {
@@ -29,16 +42,12 @@
     }
 
     .timeline {
-        .wrapper {
-            position: relative;
-            max-width: 26%;
-            margin: 0 auto;
+        padding-top: 77px;
+        padding-bottom: 100px;
 
-            .timeline-sidebar {
-                position: absolute;
-                left: -64px;
-                top: 0;
-            }
+        .container {
+            width: 446px;
+            min-width: 200px;
 
             .header {
                 margin-bottom: 30px;
@@ -48,48 +57,105 @@
                 }
             }
 
-            .timeline-item {
-                margin-bottom: 34px;
+            .wrapper {
+                position: relative;
+                margin: 0 auto;
 
-                .item-header {
-                    margin-bottom: 10px;
+                .timeline-sidebar {
+                    position: absolute;
+                    left: -64px;
+                    top: 0;
 
-                    .title-2 {
-                        line-height: 32px;
-                    }
-
-                    .timeline-date {
-                        color: var(--primary-500);
-                        line-height: 21px;
+                    img {
+                        width: 40px;
                     }
                 }
-            }
 
-            .timeline-item:nth-last-child(-n+2) {
-                margin-bottom: 94px;
-            }
+                .timeline-item {
+                    margin-bottom: 38px;
 
-            .read-more {
-                text-align: center;
-                max-width: 220px;
-                margin: auto;
+                    .item-header {
+                        margin-bottom: 10px;
 
-                button {
-                    width: 100%;
-                    background: white;
-                    border: 1px solid var(--primary-900);
-                    color: var(--primary-900);
+                        .title-2 {
+                            line-height: 36px;
+
+                            &.semi-bold {
+                                font-family: 'NeueHaasDisplayMedium';
+                            }
+                        }
+
+                        .timeline-date {
+                            color: var(--primary-500);
+                            font-family: 'IBMPlexSans-Regular';
+                            line-height: 21px;
+                        }
+                    }
+
+                    .timeline-content {
+                        p.subtitle-small {
+                            font-family: 'IBMPlexSans-Regular';
+                        }
+                    }
+                }
+
+                .timeline-item:nth-last-child(-n+2) {
+                    margin-bottom: 100px;
+                }
+
+                .read-more {
+                    text-align: center;
+                    max-width: 220px;
+                    margin: auto;
+
+                    button {
+                        width: 100%;
+                        background: white;
+                        border: 1px solid var(--primary-900);
+                        color: var(--primary-900);
+                    }
                 }
             }
         }
     }
 
-    .resources{
-        .header{
+    .community {
+        padding-top: 100px;
+
+        .card-wrapper {
+            width: 1268px;
+            height: 419px;
+            gap: 0px;
+            background: $yellow-100;
+            border-radius: 24px;
+
+            .community-card {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                border-top-right-radius: 0px;
+                border-bottom-right-radius: 0px;
+
+                &.badge {
+                    border-radius: 24px;
+                    border-top-left-radius: 0px;
+                    border-bottom-left-radius: 0px;
+                }
+            }
+
+            .divider {
+                height: 75%;
+                border: 0.5px solid $grey-500;
+            }
+        }
+    }
+
+    .resources {
+        .header {
             text-align: center;
             max-width: 100%;
 
-            h3{
+            h3 {
                 margin-bottom: 8px;
             }
         }
