UI for project page desktop

--- a/SparcWeb/Pages/Project.razor
+++ b/SparcWeb/Pages/Project.razor
@@ -143,9 +143,9 @@
                         <img src="./images/sparc-approved-badge-2x 1.png" />
                     </div>
                     <div class="card-header">
-                        <h6 class="title-2 semi-bold">Individuals</h6>
-                        <p class="subtitle-medium">At an individual level, we want to provide guidance, resources and anything else we can to help you find similar companies, fit into our projects or build your own.
-
+                        <h6 class="title-2 semi-bold">Companies</h6>
+                        <p class="subtitle-medium">
+                            As a company, you have the ability to lead by example, and so we want to partner with companies to expand our “sparc coop” and proudly show our values are aligned.
                         </p>
                     </div>
 
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-        <section class="resources">
+    <section class="resources">
         <div class="container">
             <div class="header">
                 <h3 class="subtitle-large semi-bold">Related Blogs</h3>
@@ -172,12 +172,11 @@
                         <img src="./images/Frame 359 Group 48.png" />
                     </div>
                     <div class="blog-tags">
-                        <button class="tag btn-small">#Design</button>
-                        <button class="tag btn-small">#Productivity</button>
+                        <button class="tag btn-small">Design</button>
                     </div>
                     <div>
-                        <p class="subtitle-medium">
-                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        <p class="subtitle-large">
+                            2022 Trending Web design
                         </p>
                     </div>
                 </div>
@@ -186,12 +185,13 @@
                         <img src="./images/Frame 360 Group 48.png" />
                     </div>
                     <div class="blog-tags">
-                        <button class="tag btn-small">#Design</button>
-                        <button class="tag btn-small">#Productivity</button>
+                        <button class="tag btn-small">Coding</button>
+                        <span class="tag-divider"> | </span> 
+                        <button class="tag btn-small category">Tips & Tricks</button>
                     </div>
                     <div>
-                        <p class="subtitle-medium">
-                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        <p class="subtitle-large">
+                            How to tackle HTML/CSS as a beginner (All you need to know is in here!)
                         </p>
                     </div>
                 </div>
@@ -200,16 +200,14 @@
                         <img src="./images/Frame 361 Group 48.png" />
                     </div>
                     <div class="blog-tags">
-                        <button class="tag btn-small">#Design</button>
-                        <button class="tag btn-small">#Productivity</button>
+                        <button class="tag btn-small">Design</button>
                     </div>
                     <div>
-                        <p class="subtitle-medium">
-                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        <p class="subtitle-large">
+                            Design system 101: We will answer all your questions
                         </p>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
