--- a/SparcWeb/wwwroot/Styles/Page/Project.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Project.scss
@@ -112,6 +112,7 @@
                         width: 100%;
                         background: white;
                         border: 1px solid var(--primary-900);
+                        border-radius: 5px;
                         color: var(--primary-900);
                     }
                 }
@@ -120,11 +121,13 @@
     }
 
     .community {
+        width: 100%;
         padding-top: 100px;
 
         .card-wrapper {
             width: 1268px;
             height: 419px;
+            margin: 0 auto;
             gap: 0px;
             background: $yellow-100;
             border-radius: 24px;
@@ -136,10 +139,22 @@
                 border-top-right-radius: 0px;
                 border-bottom-right-radius: 0px;
 
+                .cta-flex {
+                    margin-left: 8px;
+                    justify-content: flex-start;
+                }
+
                 &.badge {
                     border-radius: 24px;
                     border-top-left-radius: 0px;
                     border-bottom-left-radius: 0px;
+                }
+
+                input {
+                    border: 1px solid rgba(104, 105, 110, 0.5);
+                    background: $white;
+                    color: $grey-500;
+                    opacity: 0.5;
                 }
             }
 
@@ -151,12 +166,55 @@
     }
 
     .resources {
+        padding-top: 100px;
+        padding-bottom: 150px;
+
         .header {
             text-align: center;
             max-width: 100%;
+            margin-bottom: 43px;
 
             h3 {
                 margin-bottom: 8px;
+            }
+
+            p {
+                font-family: 'IBMPlexSans-Regular';
+            }
+        }
+
+        .blog-wrapper {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            gap: 32px;
+
+            .blog-card {
+                width: 384px;
+
+                img {
+                    width: 100%;
+                }
+
+                .blog-tags {
+                    margin-top: 42px;
+
+                    .tag {
+                        margin: 0;
+                        padding: 0;
+                        border: none;
+                        font-family: 'IBMPlexSans-Regular';
+                    }
+
+                    .tag-divider {
+                        font-size: 14px;
+                        color: $peach-500;
+                    }
+
+                    .subtitle-large {
+                        font-size: 24px;
+                    }
+                }
             }
         }
     }
