--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -1417,14 +1417,17 @@ nav .nav-mobile {
   width: 100%;
   background: white;
   border: 1px solid var(--primary-900);
+  border-radius: 5px;
   color: var(--primary-900);
 }
 .project-page .community {
+  width: 100%;
   padding-top: 100px;
 }
 .project-page .community .card-wrapper {
   width: 1268px;
   height: 419px;
+  margin: 0 auto;
   gap: 0px;
   background: #F2EDDF;
   border-radius: 24px;
@@ -1436,21 +1439,67 @@ nav .nav-mobile {
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
 }
+.project-page .community .card-wrapper .community-card .cta-flex {
+  margin-left: 8px;
+  justify-content: flex-start;
+}
 .project-page .community .card-wrapper .community-card.badge {
   border-radius: 24px;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
+.project-page .community .card-wrapper .community-card input {
+  border: 1px solid rgba(104, 105, 110, 0.5);
+  background: #FFFFFF;
+  color: #68696E;
+  opacity: 0.5;
+}
 .project-page .community .card-wrapper .divider {
   height: 75%;
   border: 0.5px solid #68696E;
 }
+.project-page .resources {
+  padding-top: 100px;
+  padding-bottom: 150px;
+}
 .project-page .resources .header {
   text-align: center;
   max-width: 100%;
+  margin-bottom: 43px;
 }
 .project-page .resources .header h3 {
   margin-bottom: 8px;
+}
+.project-page .resources .header p {
+  font-family: "IBMPlexSans-Regular";
+}
+.project-page .resources .blog-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+.project-page .resources .blog-wrapper .blog-card {
+  width: 384px;
+}
+.project-page .resources .blog-wrapper .blog-card img {
+  width: 100%;
+}
+.project-page .resources .blog-wrapper .blog-card .blog-tags {
+  margin-top: 42px;
+}
+.project-page .resources .blog-wrapper .blog-card .blog-tags .tag {
+  margin: 0;
+  padding: 0;
+  border: none;
+  font-family: "IBMPlexSans-Regular";
+}
+.project-page .resources .blog-wrapper .blog-card .blog-tags .tag-divider {
+  font-size: 14px;
+  color: #FF756A;
+}
+.project-page .resources .blog-wrapper .blog-card .blog-tags .subtitle-large {
+  font-size: 24px;
 }
 
 .blog-list-page .blog-hero {
