--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -932,9 +932,16 @@ h1 {
 .blog-list-page .blog-hero .title .title-1 {
   text-align: center;
 }
+@media (max-width: 838px) {
+  .blog-list-page .blog-hero {
+    max-width: 100%;
+  }
+  .blog-list-page .blog-hero .title {
+    max-width: 90%;
+  }
+}
 .blog-list-page .blog-featured {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   gap: 42px;
   padding-top: 0;
@@ -948,14 +955,19 @@ h1 {
 .blog-list-page .blog-featured .right {
   max-width: 49%;
 }
-.blog-list-page .blog-featured .right .wrapper {
-  max-width: 58%;
-}
 .blog-list-page .blog-featured .right .wrapper .title {
   margin-bottom: 40px;
 }
 .blog-list-page .blog-featured .right .wrapper .title h5 {
   margin-bottom: 40px;
+}
+@media (max-width: 838px) {
+  .blog-list-page .blog-featured {
+    flex-direction: column;
+  }
+  .blog-list-page .blog-featured .right {
+    max-width: 100%;
+  }
 }
 .blog-list-page .blog-grid {
   padding-top: 0;
@@ -1023,8 +1035,4 @@ h1 {
   background: var(--grey-900);
   color: white;
   border-radius: 100px;
-}
-.blog-page .blog-card {
-  width: 100%;
-  max-width: 456px;
 }
