--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -2,6 +2,7 @@
 <PageTitle>Sparc</PageTitle>
 
 <div class="homepage">
+    <NavMenu />
     <section class="home-hero">
         <div class="micro-post">
             @if(PostList != null)
