add search icon to search bar on project list page

--- a/SparcWeb/Pages/ProjectsList.razor
+++ b/SparcWeb/Pages/ProjectsList.razor
@@ -13,12 +13,10 @@
                 </div>
                 <div class="project-tags">
                     <button class="btn-small tag">Productivity</button>
-                    <button class="btn-small tag">Productivity</button>
-                    <button class="btn-small tag">Productivity</button>
-                    <button class="btn-small tag">Productivity</button>
-                    <button class="btn-small tag">Productivity</button>
-                    <button class="btn-small tag">Productivity</button>
-                    <button class="btn-small tag">Productivity</button>
+                    <button class="btn-small tag">Ideas</button>
+                    <button class="btn-small tag">Creativity</button>
+                    <button class="btn-small tag">Inpirational</button>
+                    <button class="btn-small tag">Motivative</button>
                 </div>
              </div>
         </div>
@@ -28,7 +26,10 @@
         <div class="container">
             <div class="list-wrapper">
                 <div class="filters">
-                    <input placeholder="Search" />
+                    <div class="search">
+                        <input placeholder="Search">
+                        <i class="material-icons">search</i>
+                    </div>
                     <select>
                         <option>Sort By</option>
                         <option>Productivity</option>
