--- a/SparcWeb/wwwroot/Styles/Page/Project.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Project.scss
@@ -218,4 +218,227 @@
             }
         }
     }
+
+    @media only screen and (max-width: 760px) {
+    }
+
+    @media only screen and (max-width: 480px) {
+        .hero-header {
+            padding-top: 76px;
+            padding-bottom: 30px;
+
+            .header {
+                max-width: 725px;
+                margin: 0 auto;
+
+                .title {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-bottom: 6px;
+
+                    img {
+                        margin-left: 32px;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+                }
+
+                .cta-flex {
+                    justify-content: center;
+                    margin-top: 40px;
+
+                    .profile-pic {
+                        max-width: 24px;
+                        max-height: 20px;
+
+                        img {
+                            max-width: 24px;
+                            max-height: 24px;
+                        }
+                    }
+                }
+            }
+        }
+
+        .timeline {
+            padding-top: 77px;
+            padding-bottom: 100px;
+
+            .container {
+                width: 446px;
+                min-width: 200px;
+
+                .header {
+                    margin-bottom: 30px;
+
+                    p {
+                        color: var(--primary-500);
+                    }
+                }
+
+                .wrapper {
+                    position: relative;
+                    margin: 0 auto;
+
+                    .timeline-sidebar {
+                        position: absolute;
+                        left: -64px;
+                        top: 0;
+
+                        img {
+                            width: 40px;
+                        }
+                    }
+
+                    .timeline-item {
+                        margin-bottom: 38px;
+
+                        .item-header {
+                            margin-bottom: 10px;
+
+                            .title-2 {
+                                line-height: 36px;
+
+                                &.semi-bold {
+                                    font-family: 'NeueHaasDisplayMedium';
+                                }
+                            }
+
+                            .timeline-date {
+                                color: var(--primary-500);
+                                font-family: 'IBMPlexSans-Regular';
+                                line-height: 21px;
+                            }
+                        }
+
+                        .timeline-content {
+                            p.subtitle-small {
+                                font-family: 'IBMPlexSans-Regular';
+                            }
+                        }
+                    }
+
+                    .timeline-item:nth-last-child(-n+2) {
+                        margin-bottom: 100px;
+                    }
+
+                    .read-more {
+                        text-align: center;
+                        max-width: 220px;
+                        margin: auto;
+
+                        button {
+                            width: 100%;
+                            background: white;
+                            border: 1px solid var(--primary-900);
+                            border-radius: 5px;
+                            color: var(--primary-900);
+                        }
+                    }
+                }
+            }
+        }
+
+        .community {
+            width: 100%;
+            padding-top: 100px;
+
+            .card-wrapper {
+                width: 1268px;
+                height: 419px;
+                margin: 0 auto;
+                gap: 0px;
+                background: $yellow-100;
+                border-radius: 24px;
+
+                .community-card {
+                    width: 100%;
+                    height: 100%;
+                    margin: 0;
+                    border-top-right-radius: 0px;
+                    border-bottom-right-radius: 0px;
+
+                    .cta-flex {
+                        margin-left: 8px;
+                        justify-content: flex-start;
+                    }
+
+                    &.badge {
+                        border-radius: 24px;
+                        border-top-left-radius: 0px;
+                        border-bottom-left-radius: 0px;
+                    }
+
+                    input {
+                        border: 1px solid rgba(104, 105, 110, 0.5);
+                        background: $white;
+                        color: $grey-500;
+                        opacity: 0.5;
+                    }
+                }
+
+                .divider {
+                    height: 75%;
+                    border: 0.5px solid $grey-500;
+                }
+            }
+        }
+
+        .resources {
+            padding-top: 100px;
+            padding-bottom: 150px;
+
+            .header {
+                text-align: center;
+                max-width: 100%;
+                margin-bottom: 43px;
+
+                h3 {
+                    margin-bottom: 8px;
+                }
+
+                p {
+                    font-family: 'IBMPlexSans-Regular';
+                }
+            }
+
+            .blog-wrapper {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                gap: 32px;
+
+                .blog-card {
+                    width: 384px;
+
+                    img {
+                        width: 100%;
+                    }
+
+                    .blog-tags {
+                        margin-top: 42px;
+
+                        .tag {
+                            margin: 0;
+                            padding: 0;
+                            border: none;
+                            font-family: 'IBMPlexSans-Regular';
+                        }
+
+                        .tag-divider {
+                            font-size: 14px;
+                            color: $peach-500;
+                        }
+
+                        .subtitle-large {
+                            font-size: 24px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
