--- a/SparcWeb/wwwroot/Styles/Global/_typography.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_typography.scss
@@ -100,6 +100,10 @@
     }
 
     @media only screen and (max-width: 480px) {
+        .title-1 {
+            font-size: 32px;
+        }
+
         .subtitle-medium {
             font-size: 16px;
         }
