--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -312,6 +312,9 @@ body .bold {
   }
 }
 @media only screen and (max-width: 480px) {
+  body .title-1 {
+    font-size: 32px;
+  }
   body .subtitle-medium {
     font-size: 16px;
   }
@@ -1244,7 +1247,7 @@ nav .nav-mobile {
   max-width: 1007px;
   margin: auto;
 }
-.project-list-page .hero-header .header .image-wrapper {
+.project-list-page .hero-header .header .icon-wrapper {
   margin-bottom: 8px;
 }
 .project-list-page .hero-header .header .title-1 {
@@ -1265,6 +1268,21 @@ nav .nav-mobile {
   color: #FF756A;
   border-radius: 100px;
 }
+.project-list-page .project-tags {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  max-width: 76%;
+  margin: auto;
+}
+.project-list-page .project-tags .tag {
+  border: 1px solid #FF756A;
+  background: inherit;
+  color: #FF756A;
+  border-radius: 100px;
+}
 .project-list-page .project-list-wrapper {
   padding-top: 220px;
 }
@@ -1277,8 +1295,18 @@ nav .nav-mobile {
   align-items: center;
   margin-bottom: 36px;
 }
+.project-list-page .project-list-wrapper .list-wrapper .filters .search {
+  position: relative;
+}
+.project-list-page .project-list-wrapper .list-wrapper .filters .search i {
+  position: absolute;
+  top: 9px;
+  right: 12px;
+  font-size: 20px;
+}
 .project-list-page .project-list-wrapper .list-wrapper .filters select {
   max-width: 124px;
+  font-size: 20px;
 }
 .project-list-page .project-list-wrapper .list-wrapper .project-list {
   display: flex;
@@ -1310,21 +1338,194 @@ nav .nav-mobile {
 .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img.live {
   width: 67px;
 }
-
-.project-tags {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  max-width: 76%;
-  margin: auto;
+@media only screen and (max-width: 760px) {
+  .project-list-page .hero-header {
+    padding-top: 76px;
+    padding-bottom: 30px;
+  }
+  .project-list-page .hero-header .container {
+    padding: 0 42px;
+  }
+  .project-list-page .hero-header .header {
+    max-width: 760px;
+  }
+  .project-list-page .hero-header .header .icon-wrapper {
+    margin-bottom: 16px;
+  }
+  .project-list-page .hero-header .header .project-tags {
+    width: 95%;
+    max-width: 390px;
+    margin: auto;
+  }
+  .project-list-page .hero-header .header .project-tags .tag {
+    padding: 3px 12px;
+    font-size: 14px;
+  }
+  .project-list-page .project-list-wrapper {
+    padding-top: 70px;
+  }
+  .project-list-page .project-list-wrapper .container {
+    padding: 0 30px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 36px;
+    gap: 20px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .filters .search {
+    width: 100%;
+    position: relative;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .filters .search input {
+    width: 100%;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .filters .search i {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 16px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .filters select {
+    max-width: 124px;
+    font-size: 16px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list {
+    justify-content: center;
+    gap: 30px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card {
+    margin-bottom: 16px;
+    padding: 0px;
+    width: calc(50% - 15px);
+    max-width: none;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper {
+    position: relative;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img.project-status {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img.in-progress {
+    width: 109px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img.live {
+    width: 67px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-header {
+    margin-bottom: 12px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper {
+    display: block;
+    margin-top: 16px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-tags {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    gap: 5px;
+    margin-bottom: 16px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-tags button {
+    font-size: 14px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-github {
+    width: 100%;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-github button {
+    width: 100%;
+  }
 }
-.project-tags .tag {
-  border: 1px solid #FF756A;
-  background: inherit;
-  color: #FF756A;
-  border-radius: 100px;
+@media only screen and (max-width: 480px) {
+  .project-list-page {
+    padding-bottom: 60px;
+  }
+  .project-list-page .hero-header {
+    text-align: center;
+    padding-top: 76px;
+    padding-bottom: 30px;
+  }
+  .project-list-page .hero-header .header {
+    max-width: 390px;
+  }
+  .project-list-page .project-list-wrapper {
+    padding-bottom: 0px;
+  }
+  .project-list-page .project-list-wrapper .container {
+    padding: 0 16px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .filters .search i {
+    top: 10px;
+    right: 10px;
+    font-size: 16px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .filters select {
+    font-size: 14px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list {
+    justify-content: center;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card {
+    margin-bottom: 16px;
+    padding: 0px;
+    width: calc(50% - 8px);
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content {
+    width: 100%;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper {
+    position: relative;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img {
+    width: 100%;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img.project-status {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img.in-progress {
+    width: 109px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .image-wrapper img.live {
+    width: 67px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-header .title-2 {
+    font-size: 20px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-header img {
+    width: 20px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content p.subtitle-small {
+    font-size: 12px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper {
+    display: block;
+    margin-top: 8px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-tags {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    gap: 5px;
+    margin-bottom: 16px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-tags button {
+    padding: 3px 12px 3px 10px;
+    font-size: 10px;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-github {
+    width: 100%;
+  }
+  .project-list-page .project-list-wrapper .list-wrapper .project-list .project-card .card-content .card-tags-wrapper .card-github button {
+    width: 100%;
+    padding-bottom: 0px;
+  }
 }
 
 .project-page .hero-header {
@@ -1500,6 +1701,182 @@ nav .nav-mobile {
 }
 .project-page .resources .blog-wrapper .blog-card .blog-tags .subtitle-large {
   font-size: 24px;
+}
+@media only screen and (max-width: 480px) {
+  .project-page .hero-header {
+    padding-top: 76px;
+    padding-bottom: 30px;
+  }
+  .project-page .hero-header .header {
+    max-width: 725px;
+    margin: 0 auto;
+  }
+  .project-page .hero-header .header .title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 6px;
+  }
+  .project-page .hero-header .header .title img {
+    margin-left: 32px;
+  }
+  .project-page .hero-header .header .title img:hover {
+    cursor: pointer;
+  }
+  .project-page .hero-header .header .cta-flex {
+    justify-content: center;
+    margin-top: 40px;
+  }
+  .project-page .hero-header .header .cta-flex .profile-pic {
+    max-width: 24px;
+    max-height: 20px;
+  }
+  .project-page .hero-header .header .cta-flex .profile-pic img {
+    max-width: 24px;
+    max-height: 24px;
+  }
+  .project-page .timeline {
+    padding-top: 77px;
+    padding-bottom: 100px;
+  }
+  .project-page .timeline .container {
+    width: 446px;
+    min-width: 200px;
+  }
+  .project-page .timeline .container .header {
+    margin-bottom: 30px;
+  }
+  .project-page .timeline .container .header p {
+    color: var(--primary-500);
+  }
+  .project-page .timeline .container .wrapper {
+    position: relative;
+    margin: 0 auto;
+  }
+  .project-page .timeline .container .wrapper .timeline-sidebar {
+    position: absolute;
+    left: -64px;
+    top: 0;
+  }
+  .project-page .timeline .container .wrapper .timeline-sidebar img {
+    width: 40px;
+  }
+  .project-page .timeline .container .wrapper .timeline-item {
+    margin-bottom: 38px;
+  }
+  .project-page .timeline .container .wrapper .timeline-item .item-header {
+    margin-bottom: 10px;
+  }
+  .project-page .timeline .container .wrapper .timeline-item .item-header .title-2 {
+    line-height: 36px;
+  }
+  .project-page .timeline .container .wrapper .timeline-item .item-header .title-2.semi-bold {
+    font-family: "NeueHaasDisplayMedium";
+  }
+  .project-page .timeline .container .wrapper .timeline-item .item-header .timeline-date {
+    color: var(--primary-500);
+    font-family: "IBMPlexSans-Regular";
+    line-height: 21px;
+  }
+  .project-page .timeline .container .wrapper .timeline-item .timeline-content p.subtitle-small {
+    font-family: "IBMPlexSans-Regular";
+  }
+  .project-page .timeline .container .wrapper .timeline-item:nth-last-child(-n+2) {
+    margin-bottom: 100px;
+  }
+  .project-page .timeline .container .wrapper .read-more {
+    text-align: center;
+    max-width: 220px;
+    margin: auto;
+  }
+  .project-page .timeline .container .wrapper .read-more button {
+    width: 100%;
+    background: white;
+    border: 1px solid var(--primary-900);
+    border-radius: 5px;
+    color: var(--primary-900);
+  }
+  .project-page .community {
+    width: 100%;
+    padding-top: 100px;
+  }
+  .project-page .community .card-wrapper {
+    width: 1268px;
+    height: 419px;
+    margin: 0 auto;
+    gap: 0px;
+    background: #F2EDDF;
+    border-radius: 24px;
+  }
+  .project-page .community .card-wrapper .community-card {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .project-page .community .card-wrapper .community-card .cta-flex {
+    margin-left: 8px;
+    justify-content: flex-start;
+  }
+  .project-page .community .card-wrapper .community-card.badge {
+    border-radius: 24px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+  }
+  .project-page .community .card-wrapper .community-card input {
+    border: 1px solid rgba(104, 105, 110, 0.5);
+    background: #FFFFFF;
+    color: #68696E;
+    opacity: 0.5;
+  }
+  .project-page .community .card-wrapper .divider {
+    height: 75%;
+    border: 0.5px solid #68696E;
+  }
+  .project-page .resources {
+    padding-top: 100px;
+    padding-bottom: 150px;
+  }
+  .project-page .resources .header {
+    text-align: center;
+    max-width: 100%;
+    margin-bottom: 43px;
+  }
+  .project-page .resources .header h3 {
+    margin-bottom: 8px;
+  }
+  .project-page .resources .header p {
+    font-family: "IBMPlexSans-Regular";
+  }
+  .project-page .resources .blog-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+  }
+  .project-page .resources .blog-wrapper .blog-card {
+    width: 384px;
+  }
+  .project-page .resources .blog-wrapper .blog-card img {
+    width: 100%;
+  }
+  .project-page .resources .blog-wrapper .blog-card .blog-tags {
+    margin-top: 42px;
+  }
+  .project-page .resources .blog-wrapper .blog-card .blog-tags .tag {
+    margin: 0;
+    padding: 0;
+    border: none;
+    font-family: "IBMPlexSans-Regular";
+  }
+  .project-page .resources .blog-wrapper .blog-card .blog-tags .tag-divider {
+    font-size: 14px;
+    color: #FF756A;
+  }
+  .project-page .resources .blog-wrapper .blog-card .blog-tags .subtitle-large {
+    font-size: 24px;
+  }
 }
 
 .blog-list-page .blog-hero {
